Fixing imports to get build compiling again